syntax = "proto3";

package go_temporal;

import "google/api/annotations.proto";

option go_package = "canaanadvisors-test/proto/user;user";


message Role {
  int64 id = 1;
  string name = 2;
}

message User {
  int64 id = 1;
  string username = 2;
  string name = 3;
  int64 role_id = 4;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User data = 1;
  string error = 2;
}

message LogoutRequest {
  string username = 1;
}

message LogoutResponse {
  string error = 1;
}

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }

  rpc Logout(LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      post: "/logout"
      body: "*"
    };
  }
}
